--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
+<!--    <data>-->
 
-        <variable
-            name="viewModel"
-            type="com.testtask.testtasktodo.viewmodel.EditViewModel" />
-    </data>
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.testtask.testtasktodo.viewmodel.EditViewModel" />-->
+<!--    </data>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
+
+        <Button
+            android:id="@+id/alert"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/baseline_add_alert_24" />
+
         <TextView
             android:id="@+id/titleEditText"
             android:layout_width="wrap_content"
             android:textSize="36sp"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.titleText}" />
+            android:text="text" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -28,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Напишите записку"
-            android:text="@={viewModel.description}" />
+            android:text="text" />
             </ScrollView>
 
         <LinearLayout
