--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="show"
+        android:visibility="invisible"
         android:layout_gravity="bottom|center"/>
 
 </LinearLayout>
